feat: set up Firebase Emulator for local testing (Task 18.1)

--- a/.env.local.example
+++ b/.env.local.example
@@ -9,13 +9,21 @@ NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 # Firebase Admin (Server-side only - JSON string)
 FIREBASE_SERVICE_ACCOUNT_KEY='{"type":"service_account","project_id":"your_project_id",...}'
 
+# Firebase Emulator (for local development)
+# Uncomment these lines when using the Firebase Emulator
+# FIRESTORE_EMULATOR_HOST=127.0.0.1:8080
+# FIREBASE_AUTH_EMULATOR_HOST=127.0.0.1:9099
+# FIREBASE_STORAGE_EMULATOR_HOST=127.0.0.1:9199
+# NEXT_PUBLIC_FIREBASE_PROJECT_ID=demo-misrak-shemeta
+
 # Chapa Payment Gateway
 CHAPA_SECRET_KEY=your_chapa_secret_key
 CHAPA_WEBHOOK_SECRET=your_webhook_secret
-CHAPA_MODE=sandbox
+NEXT_PUBLIC_CHAPA_MODE=sandbox
 
 # OpenAI
 OPENAI_API_KEY=your_openai_api_key
 
 # Telegram
 TELEGRAM_BOT_TOKEN=your_bot_token
+
