--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,12 @@ yarn-error.log*
 # TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# Firebase
+.firebase/
+emulator-data/
+*-debug.log
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
+
