feat: complete Task 18.1 (Firebase Emulator setup) and create E2E testing plan
- Downloaded and configured Java 21 for Firebase Emulator
- Fixed next.config.js configuration warnings
- Created comprehensive E2E_TESTING_REPORT.md with 10 test flows
- All emulators running successfully with seeded test data
- Dev server ready for testing at http://localhost:3000

Test coverage includes:
- Buyer flow (browse, cart, checkout, payment, tracking)
- Shop owner flow (products, orders, balance)
- Runner flow (delivery, OTP validation)
- Multi-language testing (Amharic, Afaan Oromo, English)
- Eastern Triangle Pricing Engine validation
- Mobile optimization and Telegram integration
- AI Sales Assistant
- Security and multi-tenancy
- Escrow state machine and transactions
- Notifications

Task 18.1: Complete
Task 18.3: In Progress

--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,14 @@ next-env.d.ts
 
 # Firebase
 .firebase/
+.firebase-cache/
 emulator-data/
 *-debug.log
 firebase-debug.log
 firestore-debug.log
 ui-debug.log
+
+# Java JDK (for Firebase Emulator)
+jdk-*/
+java*.zip
 
