--- a/package.json
+++ b/package.json
@@ -16,33 +16,34 @@
     "dev:emulator": "concurrently \"npm run emulator\" \"npm run dev\""
   },
   "dependencies": {
-    "next": "^15.0.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "firebase": "^10.13.0",
-    "firebase-admin": "^12.4.0",
-    "@telegram-apps/sdk-react": "^1.1.3",
-    "next-intl": "^3.19.0",
-    "openai": "^4.56.0",
-    "zod": "^3.23.8",
     "@radix-ui/react-slot": "^1.1.0",
+    "@telegram-apps/sdk-react": "^1.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.13.0",
+    "firebase-admin": "^12.4.0",
+    "next": "^15.0.0",
+    "next-intl": "^3.19.0",
+    "openai": "^4.56.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.19.34",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
+    "@vitest/ui": "^2.0.0",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "^15.0.0",
-    "tailwindcss": "^3.4.0",
+    "fast-check": "^3.22.0",
     "postcss": "^8",
-    "autoprefixer": "^10.0.1",
-    "vitest": "^2.0.0",
-    "@vitest/ui": "^2.0.0",
-    "fast-check": "^3.22.0"
+    "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5",
+    "vitest": "^2.0.0"
   }
 }
