--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "clsx": "^2.1.1",
     "firebase": "^10.13.0",
     "firebase-admin": "^12.4.0",
+    "framer-motion": "^12.34.3",
+    "lucide-react": "^0.575.0",
     "next": "^15.0.0",
     "next-intl": "^3.19.0",
     "openai": "^4.56.0",
