--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "dev:emulator": "concurrently \"npm run emulator\" \"npm run dev\""
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@telegram-apps/sdk-react": "^1.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
